--- a/s.yaml
+++ b/s.yaml
@@ -11,7 +11,7 @@ services:
       function:
         name: blog
         description: Initialize
-        runtime: nodejs18.debian10
+        runtime: nodejs16
         memorySize: 128
         cpu: 0.05
         timeout: 60
