--- a/s.yaml
+++ b/s.yaml
@@ -8,7 +8,7 @@ services:
       pre-deploy:
         - run: npm install
           path: ./
-        - run: npm build
+        - run: npm run build
           path: ./
         - plugin: website-fc
     props:
