--- a/s.yaml
+++ b/s.yaml
@@ -22,7 +22,7 @@ services:
         memorySize: 128
         cpu: 0.05
         timeout: 60
-        codeUri: ./
+        codeUri: ./dist
         diskSize: 512
       triggers:
         - name: httpTrigger
